--- a/css/stylesheet-before-nav.css
+++ b/css/stylesheet-before-nav.css
@@ -17,6 +17,7 @@ a {
 
 body {
   font-family: 'Lato', Helvetica, Arial, sans-serif;
+  position: relative;
 }
 
 ul {
@@ -30,6 +31,8 @@ hr {
   height: 0;
   border-top: 1px solid #00c7de;
 }
+
+
 
 /**********************************sticky live chat*****************/
 #sticky-chat {
@@ -76,7 +79,59 @@ hr {
   display:none;
 }
 
+/*************************MOBILE menu*********************************/
 
+#darken {
+  background-color: rgba(0,0,0,0.7);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.1s ease-out;
+}
+#main-body {
+  transition: transform 0.2s ease-in;
+}
+
+#mob-menu {
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  width: 330px;
+  right: 0;
+  height: 100vh;
+  z-index: 1000;
+  padding-top: 30px;
+
+  transform: translateX(100%);
+  transition: transform 0.2s ease-in;
+
+  background-color: rgb(0, 153, 171);
+  color: white;
+
+}
+
+#mob-menu>ul {
+  width:70%;
+}
+
+#mob-menu li {
+  width: auto;
+  padding: 20px;
+  padding-right: 50px;
+  padding-left: 10px;
+  margin: 0 auto;
+  border-bottom: solid 1px rgba(255,255,255,0.5);
+  letter-spacing: 1.5px;
+  font-size: 18px;
+
+  }
+
+#mob-menu li:last-of-type{
+  border-bottom:none;
+}
 /************************** MOBILE Header *****************************/
 .header {
   margin-top: 0.5rem;
@@ -98,6 +153,7 @@ hr {
   background-color: rgba(0, 0, 0, 0.4);
   width: 60px;
   height: 60px;
+  z-index: 2000;
 }
 
 #burger-box div {
@@ -124,7 +180,7 @@ hr {
 /****************************MOBILE Cards ******************************/
 /******Base styles******/
 .card-container {
-  margin-top: 76px;
+  margin-top: 60px;
 }
 
 .card {
@@ -133,9 +189,7 @@ hr {
 
 .img-box {
   position: relative;
-  width:
-  /* bottom: 0;
-  right: 0; */
+
 }
 
 /********Icon********/
@@ -493,12 +547,7 @@ hr {
   position: relative;
 }
 
-.business-hc h3 img {
-  width: 25px;
-  position: absolute;
-  right: 12px;
-  bottom: 18%;
-}
+
 
 .business-hc-cont {
   border: #0099ab solid 1px;
@@ -549,7 +598,7 @@ hr {
 #email {
   display: block;
   width: 90%;
-  margin: 0 5% 0 5%;
+  margin: 0 5% 10px 5%;
 
   padding: 8px 0 8px 10px;
   background-color: #ddd;
@@ -566,8 +615,10 @@ hr {
   padding: 8px 0 8px 10px;
   font-size: 12px;
   color: white;
-  margin: 10px 5% 14px 5%;
-  border: none;
+  margin: 10px 5% 10px 5%;
+  border: 1px solid transparent;
+  display: none;
+  transition: height 1s ease-out;
 }
 
 /***** Button Trio*****/
@@ -740,6 +791,33 @@ hr {
   .text-box {
     height: 140px;
   }
+
+  .card-container {
+    width: 428px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #mob-menu {
+    width: 330px;
+    right: 0;
+    height: 100vh;
+    padding-top: 30px;
+  }
+
+  #mob-menu>ul {
+    width:70%;
+  }
+
+  #mob-menu li {
+    width: auto;
+    padding: 20px;
+    padding-right: 50px;
+    padding-left: 10px;
+    margin: 0 auto;
+    letter-spacing: 1.5px;
+    font-size: 18px;
+    }
 }
 
 @media (min-width:658px) {
@@ -821,6 +899,10 @@ hr {
   }
 
   .call {
+    display: none;
+  }
+
+  #mob-menu {
     display: none;
   }
 
