--- a/css/stylesheet-before-nav.css
+++ b/css/stylesheet-before-nav.css
@@ -99,7 +99,7 @@ hr {
   display: flex;
   position: fixed;
   justify-content: center;
-  width: 330px;
+  width: 200px;
   right: 0;
   height: 100vh;
   z-index: 1000;
@@ -114,19 +114,18 @@ hr {
 }
 
 #mob-menu>ul {
-  width:70%;
+  width:85%;
 }
 
 #mob-menu li {
-  width: auto;
+  width: 170px;
   padding: 20px;
-  padding-right: 50px;
+  padding-right: 30px;
   padding-left: 10px;
   margin: 0 auto;
   border-bottom: solid 1px rgba(255,255,255,0.5);
-  letter-spacing: 1.5px;
-  font-size: 18px;
-
+  letter-spacing: 1.4px;
+  font-size: 14px;
   }
 
 #mob-menu li:last-of-type{
@@ -175,6 +174,19 @@ hr {
   display: inline-block;
   font-size: 20px;
   font-weight: normal;
+}
+
+/**************Sticky header***********/
+.sticky-wrapper {
+  width: 100%;
+}
+
+.is-sticky #burger{
+
+}
+
+.is-sticky header {
+
 }
 
 /****************************MOBILE Cards ******************************/
@@ -798,9 +810,17 @@ hr {
     margin-right: auto;
   }
 
+}
+
+@media (min-width:658px) {
+  .text-box {
+    height: 110px;
+  }
+
+
+
   #mob-menu {
     width: 330px;
-    right: 0;
     height: 100vh;
     padding-top: 30px;
   }
@@ -816,14 +836,8 @@ hr {
     padding-left: 10px;
     margin: 0 auto;
     letter-spacing: 1.5px;
-    font-size: 18px;
+    font-size: 16px;
     }
-}
-
-@media (min-width:658px) {
-  .text-box {
-    height: 110px;
-  }
 }
 
 @media (min-width: 768px) {
