--- a/css/mobile-stylesheet.css
+++ b/css/mobile-stylesheet.css
@@ -178,7 +178,6 @@ hr {
 }
 /************************** MOBILE Header *****************************/
 .header {
-  /* margin-top: 0.5rem; */
   line-height: 0;
   position: relative; /*to prevent gap between two header parts*/
 }
@@ -231,7 +230,7 @@ hr {
   position: relative;
   top: 0px;
   left:50px;
-  width: 120px;
+  width: 105px;
   transition: width 0.2s ease-out;
   z-index: 2;
 }
@@ -268,7 +267,7 @@ hr {
   display: flex;
   justify-content: center;
   align-items: center;
-  top:15px;
+  top:10px;
   right:15px;
   background-color: rgba(255, 255, 255, 0);
   transition: background-color 0.3s ease-in;
@@ -280,7 +279,10 @@ hr {
 #stickyboi {
   width:100%;
   z-index: 2000;
-  /* height:190px; */
+}
+
+#stickyboi .header {
+  height: 80px;
 }
 
 .sticky-on {
@@ -343,10 +345,20 @@ hr {
 .img-box {
   height: 187px;
   background-repeat: no-repeat;
-  background-size: 100% 187px;
-
+  border: 1px solid #dddddd;
+  border-bottom: none;
 }
 
+#busi-img{
+  background-size: cover;
+  /* background-position:0px -44px; */
+}
+
+#prof-img,
+#dir-img,
+#lend-img{
+  background-size: cover;
+}
 #busi-img {
   background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0,0,0,0.5)),
   url("../img/services2.jpg");
@@ -393,13 +405,12 @@ hr {
   font-weight: 500;
   letter-spacing: 0.08em;
   line-height: 1.15em;
-  height: 165px;
+  padding-top:10px;
 }
 
 .text-box p {
-  padding: 0.6rem 1rem 2rem;
+  margin: 0px 5% 40px;
   text-align: justify;
-  margin-top: 0px;
 }
 
 /*******Read more********/
@@ -408,7 +419,7 @@ hr {
   position: absolute;
   left: 16px;
   bottom: 11px;
-  font-size: 0.6em;
+  font-size: 12px;
   letter-spacing: 0.08em;
   font-weight: 500;
 }
@@ -543,7 +554,6 @@ hr {
 }
 
 /*************************MOBILE Side Bar*****************************/
-
 /***Yellow Buttons****/
 .sidebtn-box {
   background: #ddd;
