--- a/css/mobile-stylesheet.css
+++ b/css/mobile-stylesheet.css
@@ -147,33 +147,43 @@ hr {
   display: flex;
   position: fixed;
   justify-content: center;
-  width: 200px;
-  height: 100vh;-A
-  z-index: 1000;
-  padding-top: 30px;
-  right: -200px;
+  width: 60%;
+  height: 100vh;
+  z-index: 2001;
+  right: -60%;
   transition: right 0.2s ease-in;
-  background-color: rgb(0, 153, 171);
-  color: white;
-
+  background-color: #0099ab;
+  /* background-color: rgb(0, 153, 171); */
 }
 
 #mob-menu>ul {
-  width:85%;
+  width:100%;
 }
 
-#mob-menu li { /*not the cause*/
-  width: 170px;
-  padding: 20px;
-  padding-right: 30px;
-  padding-left: 10px;
+#mob-menu a{
+  color: white;
+  display:block;
+}
+
+#mob-menu li:hover {
+  background-color: #66B8C1;
+}
+
+#mob-menu li{
+  transition: background-color 0.4s ease-out;
+}
+
+#mob-menu a li { /*not the cause*/
+  height: 80px;
   margin: 0 auto;
   border-bottom: solid 1px rgba(255,255,255,0.5);
   letter-spacing: 1.4px;
-  font-size: 14px;
+  font-size: 18px;
+  line-height: 80px;
+  text-align: center;
   }
 
-#mob-menu li:last-of-type{
+#mob-menu a:last-of-type li{
   border-bottom:none;
 }
 /************************** MOBILE Header *****************************/
