--- a/css/mobile-stylesheet.css
+++ b/css/mobile-stylesheet.css
@@ -48,7 +48,6 @@ hr {
    position: fixed;
    bottom: 0;
    left:0;
-   /* display:none; */
    z-index: 300;
    padding: 10px 14px;
  }
@@ -153,7 +152,6 @@ hr {
   right: -60%;
   transition: right 0.2s ease-in;
   background-color: #0099ab;
-  /* background-color: rgb(0, 153, 171); */
 }
 
 #mob-menu>ul {
@@ -165,7 +163,9 @@ hr {
   display:block;
 }
 
-#mob-menu li:hover {
+/***hover effects and animation***/
+
+#mob-menu li:hover{
   background-color: #66B8C1;
 }
 
@@ -173,19 +173,55 @@ hr {
   transition: background-color 0.4s ease-out;
 }
 
-#mob-menu a li { /*not the cause*/
+/*list item styling***/
+#mob-menu>ul>a>li { /*not the cause*/
   height: 80px;
   margin: 0 auto;
-  border-bottom: solid 1px rgba(255,255,255,0.5);
+  border-top: solid 1px rgba(255,255,255,0.5);
   letter-spacing: 1.4px;
   font-size: 18px;
   line-height: 80px;
   text-align: center;
   }
 
-#mob-menu a:last-of-type li{
-  border-bottom:none;
+#home{
+  border-top: none;
+  background-image: linear-gradient(rgb(12, 229, 255), rgb(0, 153, 171));
+  transition: background-color .5s ease-out;
 }
+
+#home:hover {
+  background-image: none;
+  background-color:#66B8C1;
+}
+
+
+#mob-au-dropdown{
+ display: none;
+}
+
+#mob-news-dropdown{
+  display: none;
+}
+
+#mob-au-dropdown a li,
+#mob-news-dropdown a li{ /*Dropdown entries*/
+  border-left: 3px solid #32a0ad;
+  border-right: 3px solid #32a0ad;
+  border-top: 1px solid #32a0ad;
+  border-bottom: 1px solid #32a0ad;
+  border-radius:6px;
+
+  line-height: 20px;
+  font-size: 16px;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+
+  background-color: #007b89;
+  padding: 10px 20px;
+  margin: 2px;
+}
+
 /************************** MOBILE Header *****************************/
 .header {
   line-height: 0;
